--- a/incubator/couchdb/Chart.yaml
+++ b/incubator/couchdb/Chart.yaml
@@ -1,4 +1,13 @@
-apiVersion: v1
-description: A Helm chart for Kubernetes
 name: couchdb
 version: 0.1.0
+description: A database featuring seamless multi-master sync, that scales from
+  big data to mobile, with an intuitive HTTP/JSON API and designed for
+  reliability.
+home: https://couchdb.apache.org/
+sources:
+  - https://github.com/apache/couchdb
+  - https://github.com/kocolosk/couchdb-statefulset-assembler
+maintainers:
+  - name: Adam Kocoloski
+    email: kocolosk@apache.org
+icon: http://couchdb.apache.org/CouchDB-visual-identity/logo/CouchDB-couch-symbol.svg
