--- a/stable/verdaccio/Chart.yaml
+++ b/stable/verdaccio/Chart.yaml
@@ -1,10 +1,15 @@
 apiVersion: v1
 description: A lightweight private npm proxy registry (sinopia fork)
 name: verdaccio
-version: 0.1.0
-appVersion: 2.6.5
+version: 0.1.1
+appVersion: 2.6.6
+icon: https://github.com/verdaccio/verdaccio/blob/master/assets/verdaccio.svg
 sources:
 - http://www.verdaccio.org
+- https://github.com/verdaccio/verdaccio
+keywords:
+- npm
+- nodejs
 maintainers:
 - name: etiennetremel
   email: etienne.tremel@container-solutions.com
