--- a/stable/newrelic-infrastructure/templates/secret.yaml
+++ b/stable/newrelic-infrastructure/templates/secret.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
+  labels: {{ include "newrelic-infra.labels" . | indent 4 }}
   name: newrelic-config
 type: Opaque
 data:
