--- a/incubator/chartmuseum/values.yaml
+++ b/incubator/chartmuseum/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 image:
   repository: chartmuseum/chartmuseum
-  tag: v0.2.4
+  tag: v0.2.6
   pullPolicy: IfNotPresent
 service:
   type: ClusterIP
@@ -15,7 +15,7 @@ resources:
     cpu: 80m
     memory: 64Mi
 persistence:
-  Enabled: true
+  Enabled: false
   AccessMode: ReadWriteOnce
   Size: 8Gi
   ## A manually managed Persistent Volume and Claim
