submit to stable rather than incubator; add icon

--- a/stable/kibana/Chart.yaml
+++ b/stable/kibana/Chart.yaml
@@ -2,6 +2,7 @@ name: kibana
 version: 0.1.0
 appVersion: 5.4.3
 description: Kibana is an open source data visualization plugin for Elasticsearch
+icon: https://raw.githubusercontent.com/elastic/kibana/master/src/ui/public/icons/kibana-color.svg
 keywords:
 - elasticsearch
 - kibana
