--- a/stable/spinnaker/templates/configmap/jenkins-config.yaml
+++ b/stable/spinnaker/templates/configmap/jenkins-config.yaml
@@ -38,7 +38,13 @@ data:
               <remoteFs>/home/jenkins</remoteFs>
               <instanceCap>2147483647</instanceCap>
               <label></label>
-              <nodeSelector></nodeSelector>
+              <nodeSelector>
+                {{- $local := dict "first" true }}
+                {{- range $key, $value := .Values.jenkins.Agent.NodeSelector }}
+                  {{- if not $local.first }},{{- end }}
+                  {{- $key }}={{ $value }}
+                  {{- $_ := set $local "first" false }}
+                {{- end }}</nodeSelector>
               <resourceRequestCpu>{{ .Values.jenkins.Agent.Cpu }}</resourceRequestCpu>
               <resourceRequestMemory>{{ .Values.jenkins.Agent.Memory }}</resourceRequestMemory>
               <resourceLimitCpu>{{ .Values.jenkins.Agent.Cpu }}</resourceLimitCpu>
