--- a/stable/spinnaker/templates/hooks/delete-jobs.yaml
+++ b/stable/spinnaker/templates/hooks/delete-jobs.yaml
@@ -15,6 +15,10 @@ spec:
         app: {{ template "fullname" . }}
         component: spinnaker
     spec:
+      {{- if .Values.nodeSelector }}
+      nodeSelector:
+{{ toYaml .Values.nodeSelector | indent 8 }}
+      {{- end }}
       restartPolicy: OnFailure
       volumes:
       - name: kubectl
