--- a/stable/spinnaker/values.yaml
+++ b/stable/spinnaker/values.yaml
@@ -80,10 +80,16 @@ resources:
     cpu: 1000m
     memory: 1280Mi
 
+# Node labels for pod assignment
+# Ref: https://kubernetes.io/docs/user-guide/node-selection/
+# nodeSelector to provide to each of the Spinnaker components
+nodeSelector: {}
+
 # Redis password to use for the in-cluster redis service
 # Redis is not exposed publically
 redis:
   redisPassword: password
+  nodeSelector: {}
 
 # Minio access/secret keys for the in-cluster S3 usage
 # Minio is not exposed publically
@@ -93,6 +99,7 @@ minio:
   serviceType: ClusterIP
   accessKey: spinnakeradmin
   secretKey: spinnakeradmin
+  nodeSelector: {}
 
 gcs:
   enabled: false
@@ -116,9 +123,11 @@ jenkins:
       - workflow-job:2.11
       - credentials-binding:1.12
       - git:3.2.0
+    NodeSelector: {}
 
   Agent:
     Image: viglesiasce/spinnaker-jenkins-agent
     ImageTag: v0.2.0
     Cpu: "500m"
     Memory: "512Mi"
+    NodeSelector: {}
