--- a/incubator/ibm-blockchain-channel/values.yaml
+++ b/incubator/ibm-blockchain-channel/values.yaml
@@ -37,5 +37,7 @@ resources: {}
   #  memory: 128Mi
 
 blockchain: 
+  toolsImage: ibmblockchain/fabric-tools:1.0.0
+  peerImage: ibmblockchain/fabric-peer:1.0.0
   pullPolicy: Always
   channelName: channel1
