--- a/incubator/ibm-blockchain-channel/templates/create_channel.yaml
+++ b/incubator/ibm-blockchain-channel/templates/create_channel.yaml
@@ -18,9 +18,23 @@ spec:
 
   containers:
   - name: createchanneltx
-    image: ibmblockchain/fabric-tools:1.0.0
-    imagePullPolicy: {{.Values.blockchain.pullPolicy}}
-    command: ["sh", "-c", "cd /shared && pwd && ls && while [ ! -f /shared/status_org1peer1_complete ] || [ ! -f /shared/status_org2peer1_complete ] || [ ! -f /shared/status_fabricca_complete ] || [ ! -f /shared/status_orderer_complete ]; do echo Waiting for peers; sleep 1; done; configtxgen -profile TwoOrgsChannel -outputCreateChannelTx ${CHANNEL_NAME}.tx -channelID ${CHANNEL_NAME} && touch /shared/status_channeltx_complete && rm -f /shared/status_org1peer1_complete /shared/status_org2peer1_complete"]
+    image: {{ .Values.blockchain.toolsImage }}
+    imagePullPolicy: {{ .Values.blockchain.pullPolicy }}
+    command: 
+      - sh
+      - -c
+      - |
+        cd /shared 
+        pwd 
+        ls 
+        while [ ! -f /shared/status_org1peer1_complete ] || [ ! -f /shared/status_org2peer1_complete ] || [ ! -f /shared/status_fabricca_complete ] || [ ! -f /shared/status_orderer_complete ]; do
+          echo Waiting for peers
+          sleep 1
+        done
+        
+        configtxgen -profile TwoOrgsChannel -outputCreateChannelTx ${CHANNEL_NAME}.tx -channelID ${CHANNEL_NAME} 
+        touch /shared/status_channeltx_complete 
+        rm -f /shared/status_org1peer1_complete /shared/status_org2peer1_complete"]
     env:
     - name: CHANNEL_NAME
       value: {{.Values.blockchain.channelName}}
@@ -33,9 +47,20 @@ spec:
       name: shared
 
   - name: createchannel
-    image: ibmblockchain/fabric-peer:1.0.0
-    imagePullPolicy: {{.Values.blockchain.pullPolicy}}
-    command: ["sh", "-c", "while [ ! -f /shared/status_channeltx_complete ]; do echo Waiting for channeltx; sleep 2; done; peer channel create -o ${ORDERER_URL} -c ${CHANNEL_NAME} -f /shared/${CHANNEL_NAME}.tx && rm /shared/status_channeltx_complete && touch /shared/status_channelcreate_complete"]
+    image: {{ .Values.blockchain.peerImage }}
+    imagePullPolicy: {{ .Values.blockchain.pullPolicy }}
+    command:
+      - sh
+      - -c
+      - |
+        while [ ! -f /shared/status_channeltx_complete ]; do
+          echo Waiting for channeltx
+          sleep 2
+        done
+        
+        peer channel create -o ${ORDERER_URL} -c ${CHANNEL_NAME} -f /shared/${CHANNEL_NAME}.tx 
+        rm /shared/status_channeltx_complete 
+        touch /shared/status_channelcreate_complete"]
     env:
     - name: CHANNEL_NAME
       value: {{.Values.blockchain.channelName}}
