[incubator/ibm-blockchain-chaincode] change image to toolsImage

--- a/incubator/ibm-blockchain-chaincode/templates/chaincode_install_org2peer1.yaml
+++ b/incubator/ibm-blockchain-chaincode/templates/chaincode_install_org2peer1.yaml
@@ -18,7 +18,7 @@ spec:
 
   containers:
   - name: chaincodeinstall-org2peer1
-    image: {{ .Values.blockchain.image }}
+    image: {{ .Values.blockchain.toolsImage }}
     imagePullPolicy: {{ .Values.blockchain.pullPolicy }}
     command:
       - sh
