--- a/incubator/ibm-blockchain-chaincode/templates/chaincode_install_org1peer1.yaml
+++ b/incubator/ibm-blockchain-chaincode/templates/chaincode_install_org1peer1.yaml
@@ -18,7 +18,7 @@ spec:
 
   containers:
   - name: chaincodeinstall-org1peer1
-    image: {{ .Values.blockchain.image }}
+    image: {{ .Values.blockchain.toolsImage }}
     imagePullPolicy: {{ .Values.blockchain.pullPolicy }}
     command: 
       - sh
