--- a/incubator/ibm-blockchain-chaincode/templates/chaincode_instantiate.yaml
+++ b/incubator/ibm-blockchain-chaincode/templates/chaincode_instantiate.yaml
@@ -18,7 +18,7 @@ spec:
 
   containers:
   - name: chaincodeinstantiate
-    image: {{ .Values.blockchain.image }}
+    image: {{ .Values.blockchain.toolsImage }}
     imagePullPolicy: {{ .Values.blockchain.pullPolicy }}
     command: 
       - sh
