[incubator/ibm-blockchain-network] address requested changes

--- a/incubator/ibm-blockchain-network/templates/blockchain.yaml
+++ b/incubator/ibm-blockchain-network/templates/blockchain.yaml
@@ -23,16 +23,48 @@ spec:
       path: /composer
   containers:
   - name: cryptogen
-    image: ibmblockchain/fabric-tools:1.0.0
-    imagePullPolicy: {{.Values.blockchain.pullPolicy}}
-    command: ["sh", "-c", "cryptogen generate --config /sampleconfig/crypto-config.yaml && cp -r crypto-config /shared/ && for file in $(find /shared/ -iname *_sk); do dir=$(dirname $file); mv ${dir}/*_sk ${dir}/key.pem; done && find /shared -type d | xargs chmod a+rx && find /shared -type f | xargs chmod a+r && touch /shared/status_cryptogen_complete"]
+    image: {{ .Values.blockchain.toolsImage }}
+    imagePullPolicy: {{ .Values.blockchain.pullPolicy }}
+    command:
+        - sh
+        - -c
+        - |
+          cryptogen generate --config /sampleconfig/crypto-config.yaml
+          cp -r crypto-config /shared/
+          for file in $(find /shared/ -iname *_sk); do
+            dir=$(dirname $file); mv ${dir}/*_sk ${dir}/key.pem
+          done
+
+          find /shared -type d | xargs chmod a+rx
+          find /shared -type f | xargs chmod a+r
+          touch /shared/status_cryptogen_complete
     volumeMounts:
     - mountPath: /shared
       name: shared
   - name: configtxgen
-    image: ibmblockchain/fabric-tools:1.0.0
-    imagePullPolicy: {{.Values.blockchain.pullPolicy}}
-    command: ["sh", "-c", "sleep 1 && while [ ! -f /shared/status_cryptogen_complete ]; do echo Waiting for cryptogen; sleep 1; done; echo 'sample config is =>' && ls /sampleconfig && cp /sampleconfig/configtx.yaml /shared/configtx.yaml; echo 'shared after copy is =>' && ls /shared && cd /shared/; configtxgen -profile TwoOrgsOrdererGenesis -outputBlock orderer.block && find /shared -type d | xargs chmod a+rx && find /shared -type f | xargs chmod a+r && touch /shared/status_configtxgen_complete && rm /shared/status_cryptogen_complete"]
+    image: {{ .Values.blockchain.toolsImage }}
+    imagePullPolicy: {{ .Values.blockchain.pullPolicy }}
+    command:
+      - sh
+      - -c
+      - |
+        sleep 1
+        while [ ! -f /shared/status_cryptogen_complete ]; do
+          echo Waiting for cryptogen
+          sleep 1
+        done
+
+        echo 'sample config is =>'
+        ls /sampleconfig
+        cp /sampleconfig/configtx.yaml /shared/configtx.yaml
+        echo 'shared after copy is =>'
+        ls /shared
+        cd /shared/
+        configtxgen -profile TwoOrgsOrdererGenesis -outputBlock orderer.block
+        find /shared -type d | xargs chmod a+rx
+        find /shared -type f | xargs chmod a+r
+        touch /shared/status_configtxgen_complete
+        rm -f /shared/status_cryptogen_complete
     env:
      - name: PEERHOST1
        value: blockchain-org1peer1
@@ -52,9 +84,24 @@ spec:
     - mountPath: /shared
       name: shared
   - name: bootstrap
-    image: ibmblockchain/fabric-tools:1.0.0
-    imagePullPolicy: {{.Values.blockchain.pullPolicy}}
-    command: ["sh", "-c", "sleep 1 && while [ ! -f /shared/status_configtxgen_complete ]; do echo Waiting for configtxgen; sleep 1; done; cp -r /sampleconfig/cas /shared; touch /shared/bootstrapped && rm /shared/status_configtxgen_complete && mkdir -p /home/composer && chown 100 /home/composer && echo 'Done with bootstrapping'" ]
+    image: {{ .Values.blockchain.toolsImage }}
+    imagePullPolicy: {{ .Values.blockchain.pullPolicy }}
+    command:
+      - sh
+      - -c
+      - |
+        sleep 1
+        while [ ! -f /shared/status_configtxgen_complete ]; do
+          echo Waiting for configtxgen
+          sleep 1
+        done
+
+        cp -r /sampleconfig/cas /shared
+        touch /shared/bootstrapped
+        rm -f /shared/status_configtxgen_complete
+        mkdir -p /home/composer
+        chown 100 /home/composer
+        echo 'Done with bootstrapping'
     volumeMounts:
     - mountPath: /shared
       name: shared
@@ -79,8 +126,20 @@ spec:
 
       containers:
       - name: orderer
-        image: ibmblockchain/fabric-orderer:1.0.0
-        command: ["sh", "-c", "sleep 1 && while [ ! -f /shared/bootstrapped ]; do echo Waiting for bootstrap; sleep 1; done; touch /shared/status_orderer_complete && orderer"]
+        image: {{ .Values.blockchain.ordererImage }}
+        imagePullPolicy: {{ .Values.blockchain.pullPolicy }}
+        command:
+          - sh
+          - -c
+          - |
+            sleep 1
+            while [ ! -f /shared/bootstrapped ]; do
+              echo Waiting for bootstrap
+              sleep 1
+            done
+
+            touch /shared/status_orderer_complete
+            orderer
         env:
         - name: ORDERER_CFG_PATH
           value: /shared/
@@ -139,8 +198,20 @@ spec:
 
       containers:
       - name: ca
-        image: ibmblockchain/fabric-ca:1.0.0
-        command: ["sh", "-c", "sleep 1 && while [ ! -f /shared/bootstrapped ]; do echo Waiting for bootstrap; sleep 1; done; touch /shared/status_fabricca_complete && fabric-ca-server start -c ${CONFIGYAML}"]
+        image: {{ .Values.blockchain.caImage }}
+        imagePullPolicy: {{ .Values.blockchain.pullPolicy }}
+        command:
+        - sh
+        - -c
+        - |
+          sleep 1
+          while [ ! -f /shared/bootstrapped ]; do
+            echo Waiting for bootstrap
+            sleep 1
+          done
+
+          touch /shared/status_fabricca_complete
+          fabric-ca-server start -c ${CONFIGYAML}
         env:
         - name: CONFIGYAML
           value: /shared/cas/ca.yaml
@@ -184,8 +255,20 @@ spec:
 
       containers:
       - name: org1peer1
-        image: ibmblockchain/fabric-peer:1.0.0
-        command: ["sh", "-c", "sleep 1 && while [ ! -f /shared/bootstrapped ]; do echo Waiting for bootstrap; sleep 1; done; touch /shared/status_org1peer1_complete && peer node start --peer-defaultchain=false"]
+        image: {{ .Values.blockchain.peerImage }}
+        imagePullPolicy: {{ .Values.blockchain.pullPolicy }}
+        command:
+          - sh
+          - -c
+          - |
+            sleep 1
+            while [ ! -f /shared/bootstrapped ]; do
+              echo Waiting for bootstrap
+              sleep 1
+            done
+
+            touch /shared/status_org1peer1_complete
+            peer node start --peer-defaultchain=false
         env:
         - name: CORE_PEER_ADDRESSAUTODETECT
           value: "true"
@@ -272,8 +355,20 @@ spec:
 
       containers:
       - name: org2peer1
-        image: ibmblockchain/fabric-peer:1.0.0
-        command: ["sh", "-c", "sleep 1 && while [ ! -f /shared/bootstrapped ]; do echo Waiting for bootstrap; sleep 1; done; touch /shared/status_org2peer1_complete && peer node start --peer-defaultchain=false"]
+        image: {{ .Values.blockchain.peerImage }}
+        imagePullPolicy: {{ .Values.blockchain.pullPolicy }}
+        command:
+          - sh
+          - -c
+          - |
+            sleep 1
+            while [ ! -f /shared/bootstrapped ]; do
+              echo Waiting for bootstrap
+              sleep 1
+            done
+
+            touch /shared/status_org2peer1_complete
+            peer node start --peer-defaultchain=false
         env:
         - name: CORE_PEER_ADDRESSAUTODETECT
           value: "true"
