--- a/incubator/ibm-blockchain-network/values.yaml
+++ b/incubator/ibm-blockchain-network/values.yaml
@@ -37,4 +37,8 @@ resources: {}
   #  memory: 128Mi
 
 blockchain: 
-  pullPolicy: Always
+  toolsImage: ibmblockchain/fabric-tools:1.0.0
+  ordererImage: ibmblockchain/fabric-orderer:1.0.0
+  caImage: ibmblockchain/fabric-ca:1.0.0
+  peerImage: ibmblockchain/fabric-peer:1.0.0
+  pullPolicy: IfNotPresent
