--- a/incubator/ibm-blockchain-channel/templates/join_channel_org1peer1.yaml
+++ b/incubator/ibm-blockchain-channel/templates/join_channel_org1peer1.yaml
@@ -31,7 +31,7 @@ spec:
         
         peer channel fetch newest -o ${ORDERER_URL} -c ${CHANNEL_NAME}
         peer channel join -b ${CHANNEL_NAME}_newest.block
-        touch /shared/status_joinchannel_org1peer1_complete"]
+        touch /shared/status_joinchannel_org1peer1_complete
     env:
     - name: CHANNEL_NAME
       value: {{ .Values.blockchain.channelName }}
