Adding values for liveness & readiness probe thresholds

--- a/stable/postgresql/templates/deployment.yaml
+++ b/stable/postgresql/templates/deployment.yaml
@@ -57,18 +57,18 @@ spec:
             - sh
             - -c
             - exec pg_isready --host $POD_IP
-          initialDelaySeconds: 60
-          timeoutSeconds: 5
-          failureThreshold: 6
+          initialDelaySeconds: {{ default "60" .Values.probes.liveness.initialDelay | quote }}
+          timeoutSeconds: {{ default "5" .Values.probes.liveness.timeoutSeconds | quote }}
+          failureThreshold: {{ default "6" .Values.probes.liveness.failureThreshold | quote }}
         readinessProbe:
           exec:
             command:
             - sh
             - -c
             - exec pg_isready --host $POD_IP
-          initialDelaySeconds: 5
-          timeoutSeconds: 3
-          periodSeconds: 5
+          initialDelaySeconds: {{ default "5" .Values.probes.readiness.initialDelay | quote }}
+          timeoutSeconds: {{ default "3" .Values.probes.readiness.timeoutSeconds | quote }}
+          periodSeconds: {{ default "5" .Values.probes.readiness.periodSeconds | quote }}
         resources:
 {{ toYaml .Values.resources | indent 10 }}
         volumeMounts:
