--- a/stable/postgresql/values.yaml
+++ b/stable/postgresql/values.yaml
@@ -100,3 +100,14 @@ networkPolicy:
 nodeSelector: {}
 tolerations: []
 affinity: {}
+
+# Override default liveness & readiness probes
+probes:
+  liveness:
+    initialDelay: "60"
+    timeoutSeconds: "5"
+    failureThreshold: "6"
+  readiness:
+    initialDelay: "5"
+    timeoutSeconds: "3"
+    failureThreshold: "5"
