--- a/incubator/ibm-blockchain-network/values.yaml
+++ b/incubator/ibm-blockchain-network/values.yaml
@@ -36,7 +36,12 @@ resources: {}
   #  cpu: 100m
   #  memory: 128Mi
 
-blockchain: 
+persistence:
+  # If set to "", disables dynamic provisioning and create persistent volumes specified
+  # from the templates. If set, use the defined storage class and do not create pvs.
+  storageClass: ""
+
+blockchain:
   toolsImage: ibmblockchain/fabric-tools:1.0.0
   ordererImage: ibmblockchain/fabric-orderer:1.0.0
   caImage: ibmblockchain/fabric-ca:1.0.0
