--- a/stable/wordpress/requirements.yaml
+++ b/stable/wordpress/requirements.yaml
@@ -2,6 +2,6 @@ dependencies:
 - name: mariadb
   version: 2.0.1
   repository: https://kubernetes-charts.storage.googleapis.com/
-  condition: deployMariadb
+  condition: mariadb.enabled
   tags:
     - wordpress-database
