--- a/stable/wordpress/templates/tests/test-mariadb-connection.yaml
+++ b/stable/wordpress/templates/tests/test-mariadb-connection.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.mariadb.enabled }}
 apiVersion: v1
 kind: Pod
 metadata:
@@ -10,11 +11,7 @@ spec:
     image: {{ .Values.image }}
     env:
       - name: MARIADB_HOST
-{{- if .Values.deployMariadb }}
         value: {{ template "mariadb.fullname" . }}
-{{- else }}
-        value: {{ default "" .Values.mariadb.mariadbHostname | quote }}
-{{- end }}
       - name: MARIADB_PORT
         value: "3306"
       - name: WORDPRESS_DATABASE_NAME
@@ -28,4 +25,4 @@ spec:
             key: mariadb-password
     command: ["sh", "-c", "mysql --host=$MARIADB_HOST --port=$MARIADB_PORT --user=$WORDPRESS_DATABASE_USER --password=$WORDPRESS_DATABASE_PASSWORD"]
   restartPolicy: Never
-
+{{- end }}
