[incubator/ibm-blockchain-channel] fix resource namespaces

--- a/incubator/ibm-blockchain-channel/Chart.yaml
+++ b/incubator/ibm-blockchain-channel/Chart.yaml
@@ -1,9 +1,4 @@
-name: {{ template "ibm-blockchain-channel.fullname" . }}
-labels:
-  app: {{ template "ibm-blockchain-channel.name" . }}
-  chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-  release: {{ .Release.Name }}
-  heritage: {{ .Release.Service }}
+name: ibm-blockchain-channel
 version: 1.0.0
 appVersion: 1.0.0
 description: IBM Blockchain Channel Chart
