--- a/incubator/ibm-blockchain-channel/templates/create_channel.yaml
+++ b/incubator/ibm-blockchain-channel/templates/create_channel.yaml
@@ -1,10 +1,4 @@
 ---
-name: {{ template "ibm-blockchain-channel.fullname" . }}-create
-labels:
-  app: {{ template "ibm-blockchain-channel.name" . }}
-  chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-  release: {{ .Release.Name }}
-  heritage: {{ .Release.Service }}
 apiVersion: v1
 kind: Pod
 metadata:
@@ -59,7 +53,7 @@ spec:
         done
         
         peer channel create -o ${ORDERER_URL} -c ${CHANNEL_NAME} -f /shared/${CHANNEL_NAME}.tx 
-        rm /shared/status_channeltx_complete 
+        rm -f /shared/status_channeltx_complete 
         touch /shared/status_channelcreate_complete
     env:
     - name: CHANNEL_NAME
